# ProductionProgrammingLab1

./: CMakeLists.txt  Source.cpp  main.cpp
headers/: cast.h  fill.h  intermediate.h  result.h  setup.h  split.h  utils.h
src/: cast.cpp  fill.cpp  intermediate.cpp  result.cpp  setup.cpp  split.cpp  utils.cpp
